fix fixed scrollbar

--- a/dashboard.css
+++ b/dashboard.css
@@ -174,7 +174,7 @@ footer {
 }
 
 .my_scroll_div {
-    overflow-y: auto;
+    overflow-y: scroll;
     height: calc(100vh - 200px);
 }
 
