--- a/feedback.css
+++ b/feedback.css
@@ -120,7 +120,7 @@ main {
     padding: 5px;
     width: 100%;
     box-sizing: border-box;
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
     margin: 0;
 }
